@@ -1,7 +1,7 @@
 Package: DescTools
 Type: Package
 Title: Tools for Descriptive Statistics
-Version: 0.99.36.0103
+Version: 0.99.36.0104
 Date: 2020-06-22
 Authors@R: c(
   person("Andri", "Signorell", email = "andri@signorell.net", role = c("aut", "cre")),
@@ -60,6 +60,7 @@ Authors@R: c(
   person("Dong"          , "Li",                  role = c("ctb")),
   person("Martin"        , "Maechler",            role = c("ctb")),
   person("Arni"          , "Magnusson",           role = c("ctb")),
+  person("Ben"           , "Mainwaring",          role = c("ctb")),
   person("Daniel"        , "Malter",              role = c("ctb")),
   person("George"        , "Marsaglia",           role = c("ctb")),
   person("John"          , "Marsaglia",           role = c("ctb")),
