@@ -17,9 +17,10 @@ UPDATED FUNCTIONS:
   * ToWrd.TMod() uses a more sophisticated export logic for splitting the
     columns of a resulting data.frame to a Word table compatible 
     character matrix.
+  * Format interpretes negative digits in the same mannor as round.  
     
 BUGFIXES:
-  * 
+  * Format will respect eps if defined in a format template fmt now.
 
 
 
